burned onto landing page

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       { name: 'Observed', url: 'https://abikesa.github.io/ubuntu/', icon: '🚢' },
       { name: 'Admissible', url: './wiki/articles/bet-david-grammar.html', icon: '🏴‍☠️' },
       { name: 'Unambiguous', url: 'https://abikesa.github.io/ubuntu/tokens/', icon: '✂️' },
-      { name: 'Concepts', url: 'https://abikesa.github.io/wild-e/', icon: '🏝️' },
+      { name: 'Concepts', url: 'wiki/articles/chat-with-gpt.html', icon: '🏝️' },
     ];
 
     links.forEach((link, i) => {
